@@ -9,6 +9,12 @@
 
   * converters
 
+- webhelpers2.html.misc:
+
+  * Delete ``format_number``. To display with thosands separators, use
+    ``"{:,}".format(12346)`` (always comma) or ``"{:n}".format(12345)``
+    (locale-specific).
+
 - webhelpers2.html.tools: 
 
   * Move ``format_paragraphs`` and ``nl2br`` from containers submodule.
